fixed sidebar footer; sometimes while trying to click on the settings button it would trigger the underlying tag hidden by the footer

--- a/src/background/css/sidebar.styl
+++ b/src/background/css/sidebar.styl
@@ -49,7 +49,8 @@
         position: fixed;
         bottom: 0;
         left: 0;
-        width: 210px;
+        width: 218px;
+        padding-right 8px;
         height: 80px;
         background: #fff;
         padding: emCalc(16) 0 emCalc(20) 16px;
